# ruff-action

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  action.yml  biome.json  jest.config.js  jest.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/matchers/: check.json  format.json
.github/scripts/: check-all-tests-passed-needs.ts
.github/workflows/: check-dist.yml  ci.yml  codeql-analysis.yml  python.yml  release-drafter.yml  test.yml  update-known-checksums.yml  update-major-minor-tags.yml
__tests__/download/: custom-manifest.ndjson  download-version.test.ts  manifest.test.ts
__tests__/fixtures/: pyproject.toml  requirements-with-hash.txt
__tests__/fixtures/pyproject-dependency-groups-with-env-marker/: pyproject.toml
__tests__/fixtures/pyproject-dependency-poetry-project/: pyproject.toml
__tests__/fixtures/pyproject-optional-dependencies-project/: pyproject.toml
__tests__/utils/: glob.test.ts  pyproject-finder.test.ts  pyproject.test.ts  source-input.test.ts
__tests__/version/: file-parser.test.ts  version-request-resolver.test.ts
action/: main.py
scripts/: build-dist.mjs
src/: ruff-action.ts  update-known-checksums.ts
src/download/: download-latest.ts  download-version.ts  manifest.ts  variant-selection.ts
src/utils/: constants.ts  glob.ts  inputs.ts  platforms.ts  pyproject-finder.test.ts  pyproject-finder.ts  pyproject.test.ts  pyproject.ts  retry.ts  source-input.ts
src/version/: file-parser.ts  resolve.ts  specifier.ts  types.ts  version-request-resolver.ts
(+17 files in other folders)
